# sdjournal

./: .gitignore  .justfile  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  fuzz.yml
benches/: follow_perf.rs
crates/sdjournal/: Cargo.toml
crates/sdjournal/src/: cursor.rs  entry.rs  file.rs  follow.rs  journal.rs  lib.rs  query.rs  reader.rs  seal.rs  util.rs
crates/sdjournal/tests/: golden_journalctl.rs
crates/sdjournal/tests/fixtures/: README.md
examples/: README.md  after_cursor.rs  checkpoint_follow.rs  collect_owned.rs  cursor_roundtrip.rs  filter_exact.rs  follow_tokio.rs  follow_unit.rs  live_multi_subscriptions.rs  match_present.rs  match_unit.rs  open_dir.rs  open_dirs.rs  open_with_config.rs  or_units.rs  print_fields.rs  recent_unit.rs  tail.rs  tour.rs  verify_seal.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cursor_parse.rs  journal_open.rs
src/: config.rs  cursor.rs  entry.rs  error.rs  format.rs  journal.rs  lib.rs  reader.rs  util.rs
src/file/: decompress.rs  entries.rs  index.rs  iter.rs  mod.rs
src/follow/: mod.rs  tokio.rs  watcher.rs
src/live/: filter.rs  mod.rs  replay.rs  tail.rs  tokio.rs  watcher.rs
src/query/: cursor.rs  execute.rs  mod.rs
src/seal/: fsprg.rs  key.rs  mod.rs  verify.rs
tests/: format_fixtures.rs  golden_journalctl.rs  live_shared_engine.rs  offline_journal.rs
tests/support/: mod.rs  synthetic_journal.rs
