[package]
name = "sdjournal-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
# Fuzzing runtime integration.
libfuzzer-sys = "0.4.12"

# Local crate under test.
sdjournal = { path = ".." }

# Temporary files used by fuzz harnesses.
tempfile = "3.27.0"

[[bin]]
name = "journal_open"
path = "fuzz_targets/journal_open.rs"
test = false
doc = false
