[package]
name = "sdjournal-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
# Fuzzing runtime integration.
libfuzzer-sys = "0.4.12"

# Local crate under test.
sdjournal = { path = ".." }

[[bin]]
name = "journal_open"
path = "fuzz_targets/journal_open.rs"
test = false
doc = false

[[bin]]
name = "cursor_parse"
path = "fuzz_targets/cursor_parse.rs"
test = false
doc = false
