[package]
name = "sdjournal"
version = "0.1.5"
description = "Pure Rust systemd journal reader and query engine"
documentation = "https://docs.rs/sdjournal"
homepage = "https://github.com/lvillis/sdjournal"
repository = "https://github.com/lvillis/sdjournal"
keywords = ["systemd", "journal", "journald", "logging", "linux"]
categories = ["os::unix-apis", "parsing", "filesystem"]
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["mmap", "lz4", "zstd"]
mmap = ["dep:memmap2"]
lz4 = ["dep:lz4_flex"]
zstd = ["dep:ruzstd"]
xz = ["dep:xz2"]
tracing = ["dep:tracing"]
tokio = ["dep:tokio"]
verify-seal = ["dep:hmac", "dep:sha2", "dep:num-bigint", "dep:num-traits"]

[dependencies]
hmac = { workspace = true, optional = true }
lz4_flex = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
ruzstd = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
siphasher = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
xz2 = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
